--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -1,10 +1,10 @@
 .profileTop{
     display: flex;
+    margin-left: 20px;
 }
 .profileBody{
     margin: 0 auto;
-    border: 1px red solid;
-    width: 70%
+    width: 75%
 }
 .profileEdit{
     text-align: center;
@@ -48,15 +48,23 @@ hr{
     border: 1px#8e8e8e solid;
     width: 100% 
 }
+.postPic{
+    width: 250px;
+    height: 270px;
+}
 
 
 @media (max-width:801px){
     .profileBody{
         margin: 0;
+        width: 100%
     }
     .editbutn{
         width: 200px;
         font-weight: 600;
         border-radius: 4px;
+    }
+    .profileTop{
+        margin-left: 0px;
     }
 }
